--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -26,6 +26,7 @@ jobs:
         path: ${{ env.SERVICE }}.zip
   BuildContainers:
       runs-on: ubuntu-latest
+      needs: Build_zip
       # if: ${{ github.event_name == 'pull_request' }}
       steps:
         - uses: actions/checkout@v3
