--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -36,7 +36,7 @@ jobs:
             name: ${{ env.SERVICE }} 
         - shell: pwsh
           run: | 
-            Expand-Archive./services/${{  env.SERVICE }}/bin/${{ env.SERVICE }}.zip  -DestinationPath ./
+            Expand-Archive ./${{ env.SERVICE }}.zip  -DestinationPath ./
             Get-ChildItem
             docker build -t ${{ env.SERVICE }}:latest .
 
