--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -8,6 +8,7 @@ on:
 env:
   SERVICE: HelloWorld
   DOTNET_VERSION: '6.0.401'
+  IMAGE_NAME: helloworld
 jobs:
   Build_zip:
     runs-on: ubuntu-latest
@@ -38,6 +39,6 @@ jobs:
           run: | 
             Expand-Archive ./${{ env.SERVICE }}.zip  -DestinationPath ./
             Get-ChildItem
-            docker build -t ${{ env.SERVICE }}:latest .
+            docker build -t ${{ env.IMAGE_NAME }}:latest .
 
       
