--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -38,6 +38,9 @@ jobs:
         - shell: pwsh
           run: | 
             Expand-Archive ./${{ env.SERVICE }}.zip  -DestinationPath ./
-            Get-ChildItem
-            
+        - shell: shell
+          run: | 
+             ls -al
+            docker build -t ${{ env.IMAGE_NAME }}:latest .
+
       
