--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -37,7 +37,7 @@ jobs:
             name: ${{ env.SERVICE }} 
         - shell: pwsh
           run: Expand-Archive ./${{ env.SERVICE }}.zip  -DestinationPath ./
-        - shell: shell
+        - shell: bash
           run: | 
             ls -al
             docker build -t ${{ env.IMAGE_NAME }}:latest .
