--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -40,6 +40,6 @@ jobs:
         - shell: bash
           run: | 
             ls -al
-            docker build -t ${{ env.IMAGE_NAME }}:latest .
+            docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
 
       
