--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -36,10 +36,11 @@ jobs:
           with:
             name: ${{ env.SERVICE }} 
         - shell: pwsh
-          run: Expand-Archive ./${{ env.SERVICE }}.zip  -DestinationPath ./
+          run: Expand-Archive ./build.zip  -DestinationPath ./
         - shell: bash
           run: | 
             ls -al
-            docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
+            
+            #docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
 
       
