--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -23,24 +23,24 @@ jobs:
     - name: save artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ env.SERVICE }}
-        path: ${{ env.SERVICE }}.zip
+        name: build
+        path: build.zip
   BuildContainers:
       runs-on: ubuntu-latest
-      needs: Build_zip
+      needs: build_zip
       # if: ${{ github.event_name == 'pull_request' }}
       steps:
         - uses: actions/checkout@v3
         - name: Download zip from
           uses: actions/download-artifact@v3
           with:
-            name: ${{ env.SERVICE }} 
+            name: build
         - shell: pwsh
-          run: Expand-Archive ./build.zip  -DestinationPath ./
+          run: |
+            Expand-Archive ./build.zip  -DestinationPath ./
+            Get-ChildItem ./
         - shell: bash
           run: | 
             ls -al
-
             #docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
-
       
