--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -24,7 +24,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: build
-        path: build.zip
+        path: build
   BuildContainers:
       runs-on: ubuntu-latest
       needs: build_zip
