--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -35,14 +35,12 @@ jobs:
           uses: actions/download-artifact@v3
           with:
             name: build
-        # - shell: pwsh
-        #   run: |
-        #     Expand-Archive ./build.zip  -DestinationPath ./
-        #     Get-ChildItem ./
+        - shell: pwsh
+          run: |
+            # Expand-Archive ./build.zip  -DestinationPath ./
+            Get-ChildItem ./
         - shell: bash
           run: | 
             ls -al
-
-            
             #docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
       
