--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -42,9 +42,14 @@ jobs:
             New-Item -Path "$outputDirectory" -Name "output" -ItemType Directory
             Expand-Archive "$outputDirectory\build.zip"  -DestinationPath $build_path
             Get-ChildItem $build_path
+
+            $files = Get-ChildItem "$build_path"
+            foreach ($f in $files){
+                 $service_name = $f.Name 
+                 docker build -t $service_name:latest  --build-arg="APP_NAME=$service_name" --build-arg="BUILD_PATH=output" .
+            }
+
         - shell: bash
           run: | 
-            ls -al 
-            ls -al ./output
-            #docker build -t ${{ env.IMAGE_NAME }}:latest  --build-arg="APP_NAME=${{ env.SERVICE }}" .
-      
+            docker images
+     
