--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -46,7 +46,8 @@ jobs:
             $files = Get-ChildItem "$build_path"
             foreach ($f in $files){
                  $service_name = $f.Name 
-                 docker build --build-arg APP_NAME=$service_name,BUILD_PATH=output  -t $service_name:latest  .
+                 Write-Host "docker build --build-arg APP_NAME=$service_name,BUILD_PATH=output  -t $service_name:latest ."
+                 docker build --build-arg APP_NAME=$service_name,BUILD_PATH=output  -t $service_name:latest .
             }
 
         - shell: bash
