--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -45,9 +45,9 @@ jobs:
             Get-ChildItem $build_path
             $files = Get-ChildItem "$build_path"
             foreach ($f in $files){
-                 $service_name = $f.Name 
-                 Write-Host "docker build --build-arg APP_NAME=$service_name,BUILD_PATH=output  -t $service_name:latest ."
-                 docker build --build-arg APP_NAME=$service_name,BUILD_PATH=output  -t $service_name:latest .
+                 $service_name=$f.Name 
+                 Write-Host "docker build --build-arg "APP_NAME=$service_name,BUILD_PATH=output"  -t $service_name:latest ."
+                 docker build --build-arg "APP_NAME=$service_name,BUILD_PATH=output"  -t $service_name:latest .
             }
 
         - shell: bash
