--- a/.github/workflows/hello-deploy.yml
+++ b/.github/workflows/hello-deploy.yml
@@ -55,7 +55,7 @@ jobs:
                  Write-Host docker build --build-arg "APP_NAME=$service_name" --build-arg "BUILD_PATH=$source_folder" -t "$image_name`:latest" .
                  docker build --build-arg "APP_NAME=$service_name" --build-arg "BUILD_PATH=$source_folder" -t "$image_name`:latest" .
                  New-Item -Path "$build_path" -Name "$service_name" -ItemType Directory
-                 docker save -o "$build_path\$service_name\$image_name-latest.tar" $image_name`:latest"
+                 docker save -o "$build_path\$service_name\$image_name-latest.tar" "$image_name`:latest"
             }
 
         - shell: bash
