--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,14 +70,13 @@ jobs:
                  Copy "$outputDirectory\k8s\service.yaml" "$build_path\$service_name\service.yaml" 
                  (Get-Content "$build_path\$service_name\service.yaml") -Replace "<name>", "$service_name" | Set-Content "$build_path\$service_name\service.yaml"
             }
-
-
-
             # create final zip 
-            Compress-Archive $build_path\* $outputDirectory\deployment.zip
+            New-Item -Path "$outputDirectory" -Name "artifacts" -ItemType Directory
+
+            Compress-Archive $build_path\* $outputDirectory\artifacts\deployment.zip
 
         - name: save artifact
           uses: actions/upload-artifact@v3
           with:
             name: deployment
-            path: deployment.zip
+            path: artifacts
