--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: deploy
 on:
   workflow_dispatch:
-  push:
-    branches:
-    - test
+  # push:
+  #   branches:
+  #   - test
 env:
   DOTNET_VERSION: '6.0.401'
 jobs:
