--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,12 +54,12 @@ jobs:
                  Copy "$image_name-latest.tar.gz" "$build_path\$service_name\$image_name-latest.tar.gz"
 
                  # copy applications deployment template to application folder
-                 Copy "$outputDirectory\k8s\deployment.yaml" "$build_path\$service_name\deployment.yaml"
+                 Copy "$outputDirectory\k8s\${service_name}_deployment.yaml" "$build_path\$service_name\deployment.yaml"
                  (Get-Content "$build_path\$service_name\deployment.yaml") -Replace "<name>", "$service_name" | Set-Content "$build_path\$service_name\deployment.yaml"
                  (Get-Content "$build_path\$service_name\deployment.yaml") -Replace "<image>", "$image_name`:latest" | Set-Content "$build_path\$service_name\deployment.yaml"
 
                  # Copy Service template to application folder
-                 Copy "$outputDirectory\k8s\service.yaml" "$build_path\$service_name\service.yaml" 
+                 Copy "$outputDirectory\k8s\${service_name}_service.yaml" "$build_path\$service_name\service.yaml" 
                  (Get-Content "$build_path\$service_name\service.yaml") -Replace "<name>", "$service_name" | Set-Content "$build_path\$service_name\service.yaml"
             }
             # create final zip 
