--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,29 @@ jobs:
             foreach ($f in $files){
                  $service_name=$f.Name 
                  Write-Host "service_name is $service_name"
+
+                 $version=Get-ChildItem $source_path/$service_name -directory | Where{$_.name -match "(.*)$"}  | ForEach{[pscustomobject]@{'base'=$matches[1]}} | group base | ForEach{($_.Name)} | Select -Last 1
+                 echo $version
+
+                 Write-Host docker build --build-arg "APP_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "BUILD_PATH=$source_folder"  -t "$image_name`:latest" .
+                 
+                 docker build --build-arg "APP_NAME=$service_name" --build-arg "BUILD_PATH=$source_folder" -t "$image_name`:latest" .
+                 New-Item -Path "$build_path" -Name "$service_name" -ItemType Directory
+
+                 docker save  "$image_name`:latest" |  gzip > "$image_name-latest.tar.gz"
+
+                 Copy "$image_name-latest.tar.gz" "$build_path\$service_name\$image_name-latest.tar.gz"
+
+                 # copy applications deployment template to application folder
+                 
+                 Copy "$outputDirectory\k8s\${service_name}_deployment.yaml" "$build_path\$service_name\deployment.yaml"
+                 (Get-Content "$build_path\$service_name\deployment.yaml") -Replace "<name>", "$service_name" | Set-Content "$build_path\$service_name\deployment.yaml"
+                 (Get-Content "$build_path\$service_name\deployment.yaml") -Replace "<image>", "$image_name`:latest" | Set-Content "$build_path\$service_name\deployment.yaml"
+
+                 # Copy Service template to application folder
+                 Copy "$outputDirectory\k8s\${service_name}_service.yaml" "$build_path\$service_name\service.yaml" 
+                 (Get-Content "$build_path\$service_name\service.yaml") -Replace "<name>", "$service_name" | Set-Content "$build_path\$service_name\service.yaml"
+                 
             }
             # create final zip 
             New-Item -Path "$currentPath" -Name "artifacts" -ItemType Directory
