--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,17 +45,19 @@ jobs:
             $files = Get-ChildItem "$source_path\services"
             foreach ($f in $files){
                  $service_name=$f.Name 
+                 $image_name=$service_name.ToLower()
                  $service_output_path="$build_path\$service_name"
                  Write-Host "service_name is $service_name, service_output_path is $service_output_path"
-                 
                  New-Item -Path "$service_output_path" -ItemType Directory -Force
 
                  # get service latest version
                  $version=Get-ChildItem $source_path/services/$service_name -directory | Where{$_.name -match "(.*)$"}  | ForEach{[pscustomobject]@{'base'=$matches[1]}} | group base | ForEach{($_.Name)} | Select -Last 1
                  
-                 Write-Host docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder" --build-arg "COMMIT_SHA=$GITHUB_SHA" -t "$image_name`:latest" .
+                 
 
-                 docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder" --build-arg "COMMIT_SHA=$GITHUB_SHA" -t "$image_name`:latest" .
+                 Write-Host docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder\services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
+
+                 docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder\services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
 
                  docker save  "$image_name`:latest" |  gzip > "$image_name-latest.tar.gz"
                  Copy "$image_name-latest.tar.gz" "$service_output_path\$image_name-latest.tar.gz"
