--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -55,9 +55,9 @@ jobs:
                  
                  
 
-                 Write-Host docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder\services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
+                 Write-Host docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder/services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
 
-                 docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder\services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
+                 docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder/services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
 
                  docker save  "$image_name`:latest" |  gzip > "$image_name-latest.tar.gz"
                  Copy "$image_name-latest.tar.gz" "$service_output_path\$image_name-latest.tar.gz"
