--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,12 @@ jobs:
                
                  docker build --build-arg "SERVICE_NAME=$service_name" --build-arg "VERSION=$version" --build-arg "SOURCE_PATH=$source_folder/services" --build-arg "COMMIT_SHA=$Env:GITHUB_SHA" -t "$image_name`:latest" .
 
-                 docker save  "$image_name`:latest" | Compress-Archive  -DestinationPath "$service_output_path\$image_name-latest.zip"
+
+                 docker save  "$image_name`:latest" -o image.tar 
+
+                 $curDir = Get-Location 
+                 Compress-Archive -Path $curDir\*.tar  -DestinationPath "$image_name-latest.zip"
+
                  #Copy "$image_name-latest.zip" "$service_output_path\$image_name-latest.zip"
 
                  # copy applications deployment template to output folder and rename to deployment.yaml
